Run dev enviroment trough docker now

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,13 +11,12 @@ services:
         source: .
         target: /app
     depends_on:
-      - db
+      prisma_browser:
+        condition: service_started
     ports:
       - 3000:3000
-    networks:
-      - defualt
 
-  dev_prisma:
+  prisma_browser:
     build:
       context: .
       target: prismaBrowser
@@ -28,12 +27,11 @@ services:
         source: .
         target: /app
     depends_on:
-      - dev_server
+      db:
+        condition: service_healthy
     ports:
       - 5555:5555
-    networks:
-      - defualt
-
+  
   prod_server:
     build:
       context: .
@@ -51,10 +49,10 @@ services:
       - MYSQL_DATABASE=praksislista
       - MYSQL_ROOT_PASSWORD=changeme
     profiles: ["dev", "prod", "db"]
-    networks:
-      - defualt
+    #Taken from https://stackoverflow.com/questions/42567475/docker-compose-check-if-mysql-connection-is-ready
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 5s
+      retries: 10
     ports:
       - 3306:3306
-
-networks:
-  defualt:
