--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.11.0",
     "next": "^14.1.3",
     "prisma": "^5.11.0",
     "react": "^18",
