--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18"
+
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,9 +27,10 @@
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
