--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,12 +6,26 @@ services:
       target: dev
     profiles:
       - dev
-    volumes:
-      - type: bind
-        source: .
-        target: /app
+    develop:
+      watch:
+        - action: sync
+          path: ./src
+          target: /app/src
+        - action: sync
+          path: ./public
+          target: /app/public
+        - action: sync+restart
+          path: ./prisma/
+          ignore:
+            - schema.prisma
+            - migrations
+          target: /app/prisma/
+        - action: rebuild
+          path: package.json
+        - action: rebuild
+          path: ./prisma/migrations
     depends_on:
-      db:
+      prisma_browser:
         condition: service_healthy
     ports:
       - 3000:3000
@@ -22,13 +36,19 @@ services:
       target: prismaBrowser
     profiles:
       - dev
-    volumes:
-      - type: bind
-        source: .
-        target: /app
     depends_on:
-      dev_server:
+      db:
         condition: service_healthy
+    develop:
+      watch:
+        - action: sync+restart
+          path: ./prisma
+          target: /app/prisma
+          ignore:
+            - schema.prisma
+            - migrations
+        - action: rebuild
+          path: ./prisma/migrations
     ports:
       - 5555:5555
 
