--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "5.11.0",
     "next": "^14.1.4",
+    "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
     "react": "^18",
     "react-dom": "^18"
