--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
+    "bcrypt": "^5.1.1",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
