Added Gant diagram with dummy data from React Google Charts

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
+    "@syncfusion/ej2-react-gantt": "^25.1.35",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "prisma": "^5.11.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-google-charts": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
