--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "mysql2": "^3.9.2",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
+    "oracledb": "^6.4.0",
+    "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18"
   },
