--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,16 @@
         "name": "next"
       }
     ],
-    "types": ["bun-types"],
     "paths": {
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "knexfile.ts"
+  ],
   "exclude": ["node_modules"]
 }
