Login Works now... HURRAY

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,11 +3,12 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": true,
+    "noFallthroughCasesInSwitch": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "Bundler",
+    "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
@@ -17,6 +18,7 @@
         "name": "next"
       }
     ],
+    "types": ["@types/bun"],
     "paths": {
       "@/*": ["./src/*"]
     }
