--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "--bun next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
     "next": "^14.1.4",
@@ -20,11 +19,11 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "bun-types": "^1.0.33",
     "daisyui": "latest",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
