--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-google-charts": "^4.0.1"
+    "react-google-charts": "^4.0.1",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,7 +27,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "bun-types": "^1.0.33",
-    "daisyui": "latest",
+    "daisyui": "^4.7.3",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
