Added package-lock.json to gitignore. added "Add User" form, but when clicking save it returns error 500 internal server error

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "@types/bun": "^1.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
