--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-gantt": "^25.1.35",
     "bcrypt": "^5.1.1",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
-    "@syncfusion/ej2-react-gantt": "^25.1.35",
     "next": "^14.1.4",
     "next-auth": "^4.24.7",
     "oracledb": "^6.4.0",
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
+    "server-only": "^0.0.1",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
