--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "next-themes": "^0.3.0",
     "oracledb": "^6.4.0",
     "pg-query-stream": "^4.5.3",
-    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
@@ -39,6 +38,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
+    "prettier": "3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
