--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+# @format
+
 # This file is a template, and might need editing before it works on your project.
 # This is a sample GitLab CI/CD configuration file that should run without any modifications.
 # It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
@@ -15,46 +17,31 @@
 # https://docs.gitlab.com/ee/development/cicd/templates.html
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
+image: node:latest
+
 stages:
   - lint
   - build
   - test
-  - deploy
 
-prettier:
+cache:
+  paths:
+    - node_modules/
+
+lint:
   stage: lint
-  image: node:latest
   script:
-    - npm ci --cache .npm --prefer-offline
-    - npx prettier --check .
+    - npm install
+    - npm run lint
 
-eslint:
-  stage: lint
-  image: node:latest
-  script:
-    - npm ci --cache .npm --prefer-offline
-    - npx eslint .
-
-sonarlint:
-  stage: lint
-  image: sonarsource/sonar-scanner-cli:latest
-  script:
-    - sonar-scanner
-
-build-job:
+build:
   stage: build
   script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+    - npm install
+    - npm run build
 
-unit-test-job:
+test:
   stage: test
   script:
-    - echo "Running unit tests... This is not iplemented yet"
-
-deploy-job:
-  stage: deploy
-  environment: production
-  script:
-    - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    - npm install
+    - npm run test
