--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,11 +28,11 @@ cache:
   paths:
     - node_modules/
 
-lint:
-  stage: lint
-  script:
-    - npm install
-    - npm run lint
+# lint:
+#   stage: lint
+#   script:
+#     - npm install
+#     - npm run lint
 
 format:
   stage: lint
