--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/x-charts": "^7.1.1",
     "@syncfusion/ej2-react-gantt": "^25.1.35",
     "bcrypt": "^5.1.1",
+    "eslint": "^8.0.0",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
     "next": "^14.1.4",
@@ -29,6 +30,7 @@
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
     "@types/bun": "^1.0.10",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -36,11 +38,13 @@
     "autoprefixer": "^10.0.1",
     "bun-types": "^1.0.33",
     "daisyui": "^4.7.3",
-    "eslint": "^8",
     "eslint-config-next": "14.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.0.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "typescript-eslint": "^7.6.0"
   }
 }
