--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "noFallthroughCasesInSwitch": true,
@@ -22,13 +18,9 @@
         "name": "next"
       }
     ],
-    "types": [
-      "@types/bun"
-    ],
+    "types": ["@types/bun"],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "strict": false
   },
@@ -39,7 +31,5 @@
     ".next/types/**/*.ts",
     "knexfile.ts"
   ],
-  "exclude": [
-    "node_modules"
-  ]
+  "exclude": ["node_modules"]
 }
