--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "typescript-eslint": "^7.6.0"
+    "typescript-eslint": "^7.6.0",
+    "nopt": "^1.0.10"
   }
 }
