--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,15 +19,16 @@
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 image: oven/bun:latest
 
+defualt:
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - node_modules/
 stages:
   - install
   - format
   - lint
   - build
-
-cache:
-  paths:
-    - node_modules/*
 
 install:
   stage: install
