--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "./node_modules/.bin/next lint"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
