--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "next": "next"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -15,6 +16,7 @@
     "@mui/x-charts": "^7.1.1",
     "@syncfusion/ej2-react-gantt": "^25.1.35",
     "bcrypt": "^5.1.1",
+    "bun": "^1.1.3",
     "eslint": "^8.0.0",
     "knex": "^3.1.0",
     "mysql2": "^3.9.2",
@@ -41,11 +43,11 @@
     "eslint-config-next": "14.1.3",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.0.0",
+    "nopt": "^1.0.10",
     "postcss": "^8",
     "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "typescript-eslint": "^7.6.0",
-    "nopt": "^1.0.10"
+    "typescript-eslint": "^7.6.0"
   }
 }
