--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "oracledb": "^6.4.0",
     "pg-query-stream": "^4.5.3",
     "react": "^18",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-google-charts": "^4.0.1",
+    "react-modal": "^3.16.1",
     "server-only": "^0.0.1",
     "tailwind": "^4.0.0"
   },
