--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -3,6 +3,11 @@ services:
     build:
       context: .
       target: dev
+    environment:
+      DATABASE_URL: mysql://root:changeme@db/praksislista
+      FEIDE_CLIENT_ID: b88b132a-2f04-49ef-aa4c-ab906312284c
+      FEIDE_CLIENT_SECRET: 53a00bbb-9ef7-409a-baf5-d68942c4b691
+      NEXTAUTH_SECRET: HelloWorld
     develop:
       watch:
         - action: sync
@@ -16,7 +21,6 @@ services:
 
   db:
     environment:
-      - MYSQL_DATABASE=praksislista
       - MYSQL_ROOT_PASSWORD=changeme
     ports:
       - 3306:3306
