--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,7 @@ stages:
   - lint
   - format
   - build
+  - deploy
 
 default:
   cache:
@@ -51,3 +52,13 @@ format:
   stage: format
   script:
     - npm run format
+
+deploy:
+  stage: deploy
+  script:
+    - apt-get update -y
+    - apt-get install -y sshpass
+    - export SSHPASS=$DEPLOY_PASSWORD
+    - sshpass -e scp -o stricthostkeychecking=no -r ./dist/* $DEPLOY_USER@129.241.153.29:/path/to/deploy/directory
+  only:
+    - master
