--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,7 +56,13 @@ format:
 deploy:
   stage: deploy
   script:
-    - apt-get update -y
-    - apt-get install -y sshpass
-    - export SSHPASS=$DEPLOY_PASSWORD
-    - sshpass -e scp -o stricthostkeychecking=no -r ./dist/* $DEPLOY_USER@129.241.153.29:/path/to/deploy/directory
+    - "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
+    - eval $(ssh-agent -s)
+    - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add - > /dev/null
+    - mkdir -p ~/.ssh
+    - chmod 700 ~/.ssh
+    - echo "129.241.153.29 ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIDmYnPnO0W6eDSP/bwybKo4I1O2YIK4Udpq4dNPgR35m" >> ~/.ssh/known_hosts
+    - chmod 644 ~/.ssh/known_hosts
+    - git push ssh://git@129.241.153.29:/path/to/repo.git
+  only:
+    - master
