removed port from the compose file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,8 +81,8 @@ deploy:
     - apk update && apk add openssh-client
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f my-app || true"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d -p 80:80 --name my-app $TAG_COMMIT"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
   environment:
     name: production
     url: http://your_server_IP
