--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,12 +64,19 @@ publish:
   image: docker:latest
   stage: publish
   services:
-    - docker:dind
+    - name: docker:dind
+      command: ["--tls=false"] # disable TLS for simplicity
   script:
     - docker build -t $TAG_COMMIT -t $TAG_LATEST .
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
     - docker push $TAG_COMMIT
     - docker push $TAG_LATEST
+  variables:
+    DOCKER_HOST: tcp://docker:2375 # Ensure the correct Docker host
+    DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
+  tags:
+    - docker # Ensure the runner has Docker capabilities
+  # Additional configuration if needed
 
 deploy:
   image: alpine:latest
