--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,9 +72,12 @@ publish:
     - docker push $TAG_COMMIT
     - docker push $TAG_LATEST
   variables:
+    DOCKER_HOST: tcp://129.241.153.29:3000
     DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
   tags:
     - docker # Ensure the runner has Docker capabilities
+  # Additional configuration if needed
+
 deploy:
   image: alpine:latest
   stage: deploy
