--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,10 +67,11 @@ publish:
     - name: docker:dind
       command: ["--tls=false"] # disable TLS for simplicity
   script:
-    - docker build -t $TAG_COMMIT -t $TAG_LATEST .
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker push $TAG_COMMIT
-    - docker push $TAG_LATEST
+    - echo "Publishing to GitLab Container Registry"
+      - docker build -t $TAG_COMMIT -t $TAG_LATEST .
+      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+      - docker push $TAG_COMMIT
+      - docker push $TAG_LATEST
   variables:
     DOCKER_HOST: tcp://129.241.153.29:3000
     DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
@@ -84,12 +85,13 @@ deploy:
   tags:
     - deployment
   script:
-    - chmod og= $ID_RSA
-    - apk update && apk add openssh-client
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
+    - echo "Deploying to production server"
+      - chmod og= $ID_RSA
+      - apk update && apk add openssh-client
+      - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+      - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
+      - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
+      - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
   environment:
     name: production
     url: http://129.241.153.29
