--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,12 +85,12 @@ deploy:
     - deployment
   script:
     - echo "Deploying to production server"
-    - chmod og= $ID_RSA
+    - chmod og= $SSH_PRIVATE_KEY
     - apk update && apk add openssh-client
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictKeyChecking=no $johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
+    - ssh -i $SSH_PRIVATE_KEY -o StrictHostKeyChecking=no $johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
   environment:
     name: production
     url: http://129.241.153.29
