--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,10 +88,10 @@ deploy:
     - echo "$SSH_PRIVATE_KEY" > id_rsa
     - chmod 600 id_rsa
     - apk update && apk add openssh-client
-    - ssh -i id_rsa -o StrictHostKeyChecking=no deployer@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i id_rsa -o StrictHostKeyChecking=no deployer@$129.241.153.29 "docker pull $TAG_COMMIT"
-    - ssh -i id_rsa -o StrictHostKeyChecking=no deployer@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
-    - ssh -i id_rsa -o StrictHostKeyChecking=no deployer@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
+    - ssh -i id_rsa -o StrictHostKeyChecking=no johakv@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+    - ssh -i id_rsa -o StrictHostKeyChecking=no johakv@$129.241.153.29 "docker pull $TAG_COMMIT"
+    - ssh -i id_rsa -o StrictHostKeyChecking=no johakv@$129.241.153.29 "docker compose rm -f praksisplasslista|| true"
+    - ssh -i id_rsa -o StrictHostKeyChecking=no johakv@$129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
   environment:
     name: production
     url: http://129.241.153.29:3000
