--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ stages:
   # - lint
   # - format
   # - build
+  - ping_test
   - publish
   - deploy
 
@@ -77,6 +78,11 @@ publish:
     DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
   tags:
     - docker
+
+#ping test
+ping_test:
+  script:
+    - ping -c 4 129.241.153.29
 
 deploy:
   image: alpine:latest
