--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,19 +65,12 @@ publish:
   image: docker:latest
   stage: publish
   services:
-    - name: docker:dind
-      command: ["--tls=false"] # disable TLS for simplicity
+    - docker:dind
   script:
-    - echo "Publishing to GitLab Container Registry"
-      - docker build -t $TAG_COMMIT -t $TAG_LATEST .
-      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-      - docker push $TAG_COMMIT
-      - docker push $TAG_LATEST
-  variables:
-    DOCKER_HOST: tcp://129.241.153.29:3000
-    DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
-  tags:
-    - docker
+    - docker build -t $TAG_COMMIT -t $TAG_LATEST .
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker push $TAG_COMMIT
+    - docker push $TAG_LATEST
 
 #ping test
 ping_test:
@@ -86,6 +79,7 @@ ping_test:
   script:
     - apk add --no-cache iputils
     - ping -c 4 129.241.153.29
+
 deploy:
   image: alpine:latest
   stage: deploy
