--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -65,12 +65,19 @@ publish:
   image: docker:latest
   stage: publish
   services:
-    - docker:dind
+    - name: docker:dind
+      command: ["--tls=false"] # disable TLS for simplicity
   script:
-    - docker build -t $TAG_COMMIT -t $TAG_LATEST .
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker push $TAG_COMMIT
-    - docker push $TAG_LATEST
+    - echo "Publishing to GitLab Container Registry"
+      - docker build -t $TAG_COMMIT -t $TAG_LATEST .
+      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+      - docker push $TAG_COMMIT
+      - docker push $TAG_LATEST
+  variables:
+    DOCKER_HOST: tcp://129.241.153.29:3000
+    DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
+  tags:
+    - docker
 
 #ping test
 ping_test:
