--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,61 +1,8 @@
 # @format
 
-# This file is a template, and might need editing before it works on your project.
-# This is a sample GitLab CI/CD configuration file that should run without any modifications.
-# It demonstrates a basic 3 stage CI/CD pipeline. Instead of real tests or scripts,
-# it uses echo commands to simulate the pipeline execution.
-#
-# A pipeline is composed of independent jobs that run scripts, grouped into stages.
-# Stages run in sequential order, but jobs within stages run in parallel.
-#
-# For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
-#
-# You can copy and paste this template into a new `.gitlab-ci.yml` file.
-# You should not add this template to an existing `.gitlab-ci.yml` file by using the `include:` keyword.
-#
-# To contribute improvements to CI/CD templates, please follow the Development guide at:
-# https://docs.gitlab.com/ee/development/cicd/templates.html
-# This specific template is located at:
-# https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
-# Inspired by https://www.digitalocean.com/community/tutorials/how-to-set-up-a-continuous-deployment-pipeline-with-gitlab-on-ubuntu
 stages:
-  # - install
-  # - lint
-  # - format
-  # - build
-  - ping_test
   - publish
   - deploy
-
-default:
-  cache:
-    key: $CI_COMMIT_REF_SLUG
-    paths:
-      - node_modules/
-      - public/
-    policy: pull-push
-  image: node:latest
-
-# install:
-#   stage: install
-#   script:
-#     - npm install --also=dev
-#     - npm install --save next
-#     - npm install --save-dev typescript @types/react @types/node prettier
-# build:
-#   stage: build
-#   script:
-#     - npm run build
-
-# lint:
-#   stage: lint
-#   script:
-#     - npm run lint
-
-# format:
-#   stage: format
-#   script:
-#     - npm run format
 
 variables:
   TAG_LATEST: $CI_REGISTRY_IMAGE/$CI_COMMIT_REF_NAME:latest
@@ -65,27 +12,12 @@ publish:
   image: docker:latest
   stage: publish
   services:
-    - name: docker:dind
-      command: ["--tls=false"] # disable TLS for simplicity
+    - docker:dind
   script:
-    - echo "Publishing to GitLab Container Registry"
-      - docker build -t $TAG_COMMIT -t $TAG_LATEST .
-      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-      - docker push $TAG_COMMIT
-      - docker push $TAG_LATEST
-  variables:
-    DOCKER_HOST: tcp://129.241.153.29:3000
-    DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
-  tags:
-    - docker
-
-#ping test
-ping_test:
-  stage: ping_test
-  image: alpine:latest
-  script:
-    - apk add --no-cache iputils
-    - ping -c 4 129.241.153.29
+    - docker build -t $TAG_COMMIT -t $TAG_LATEST .
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker push $TAG_COMMIT
+    - docker push $TAG_LATEST
 
 deploy:
   image: alpine:latest
@@ -95,10 +27,10 @@ deploy:
   script:
     - chmod og= $ID_RSA
     - apk update && apk add openssh-client
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose rm -f praksisplasslista|| true"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker run -d --name praksisplasslista$TAG_COMMIT"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@$129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@$129.241.153.29 "docker pull $TAG_COMMIT"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@$129.241.153.29 "docker container rm -f my-app || true"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@$129.241.153.29 "docker run -d -p 80:80 --name my-app $TAG_COMMIT"
   environment:
     name: production
     url: http://129.241.153.29
