--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ stages:
   # - lint
   # - format
   # - build
+  - ping_test
   - publish
   - deploy
 
@@ -67,15 +68,24 @@ publish:
     - name: docker:dind
       command: ["--tls=false"] # disable TLS for simplicity
   script:
-    - docker build -t $TAG_COMMIT -t $TAG_LATEST .
-    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker push $TAG_COMMIT
-    - docker push $TAG_LATEST
+    - echo "Publishing to GitLab Container Registry"
+      - docker build -t $TAG_COMMIT -t $TAG_LATEST .
+      - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+      - docker push $TAG_COMMIT
+      - docker push $TAG_LATEST
   variables:
-    DOCKER_HOST: tcp://129.241.153.29
+    DOCKER_HOST: tcp://129.241.153.29:3000
     DOCKER_TLS_CERTDIR: "" # Disable TLS to avoid cert issues
   tags:
     - docker
+
+#ping test
+ping_test:
+  stage: ping_test
+  image: alpine:latest
+  script:
+    - apk add --no-cache iputils
+    - ping -c 4 129.241.153.29
 
 deploy:
   image: alpine:latest
