trying to set no cache flag

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -92,6 +92,8 @@ deploy:
   stage: deploy
   tags:
     - deployment
+  before_script:
+    - apk add --update --no-cache git
   script:
     - chmod 600 $ID_RSA
     - apk update && apk add openssh-client
