made changes to compose.prod

--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -1,3 +1,5 @@
+# @format
+
 version: "3.7"
 
 services:
@@ -5,6 +7,7 @@ services:
     build:
       context: .
       target: prod
+    image: praksislista:latest
     depends_on:
       db:
         condition: service_healthy
