--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -72,8 +72,7 @@ publish:
     - TAG_LATEST=$(echo $TAG_LATEST | tr '[:upper:]' '[:lower:]')
     - docker compose build .
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker compose push $TAG_COMMIT
-    - docker compose push $TAG_LATEST
+    - docker compose push
 
 deploy:
   image: alpine:latest
