specified that the image should be the production image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -70,9 +70,9 @@ publish:
   script:
     - TAG_COMMIT=$(echo $TAG_COMMIT | tr '[:upper:]' '[:lower:]')
     - TAG_LATEST=$(echo $TAG_LATEST | tr '[:upper:]' '[:lower:]')
-    - docker compose build web
+    - docker compose -f docker-compose.prod.yaml build
     - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-    - docker compose push
+    - docker compose -f docker-compose.prod.yaml push
 
 deploy:
   image: alpine:latest
@@ -85,8 +85,8 @@ deploy:
     - chmod 600 $ID_RSA
     - apk update && apk add openssh-client
     - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose pull $TAG_COMMIT"
-    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose up praksisplasslista"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose -f docker-compose.prod.yaml pull $TAG_COMMIT"
+    - ssh -i $ID_RSA -o StrictHostKeyChecking=no $deployer@129.241.153.29 "docker compose -f docker-compose.prod.yaml up praksisplasslista"
   environment:
     name: production
     url: http://129.241.153.29
