changed the knex config file position, copy it to standalone and fixed CMD

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,6 @@
     },
     "strict": false
   },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "knexfile.ts"
-  ],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
